# python-aidot

./: pyproject.toml  setup.py
src/aidot/: client.py  device_client.py  discover.py
