[project]
name = "python-aidot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Sam Clark", email = "sam.clark@posit.co" }
]
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.12",
    "cryptography>=45",
    "requests>=2.32",
    "setuptools>=80.9",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aidot"]
